--- a/minons/index.html
+++ b/minons/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./reset.css">
     <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
@@ -18,6 +19,9 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/sale.png" alt="Розпродаж" class="sale">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
