--- a/minons/index.html
+++ b/minons/index.html
@@ -31,6 +31,8 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -40,6 +42,9 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/sale.png" alt="Розпродаж" class="sale">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -49,6 +54,8 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -58,6 +65,8 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -67,6 +76,9 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/sale.png" alt="Розпродаж" class="sale">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -76,6 +88,9 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
         <div>
           <img src="./minon.png" alt="minon" />
@@ -85,6 +100,9 @@
             immature than most of the other Minions.
           </p>
           <a href="#">Read more</a>
+          <img src="./img/balance.png" alt="Порівняння" class="balance">
+          <img src="./img/sale.png" alt="Розпродаж" class="sale">
+          <img src="./img/star.png" alt="Додати в улюблене" class="star">
         </div>
       </section>
     </main>
