--- a/Howework№6/index.html
+++ b/Howework№6/index.html
@@ -1,114 +1,120 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="./style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./reset.css" />
+    <link rel="stylesheet" href="./style.css" />
+  </head>
+  <body>
     <header class="header">
-        <div class="container">
-            <nav class="navigation">
-                <ul class="nav-list">
-                    <li class="nav-item">
-                        <a href="#" class="nav-link home">
-                            Home
-                        </a>
-                    </li>               
-                    <li class="nav-item">
-                        <a href="#" class="nav-link tutors">
-                            Tutors                          
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a href="#" class="nav-link sign-up">
-                            Sign Up                          
-                        </a>
-                    </li>
-                </ul> 
-            </nav>
-            <div class="header-info">
-                <div class="header-text">
-                    <h1 class="title">
-                        Get unstuck on your homework
-                      </h1>
-                    <p class="subtitle">Find world class tutors to help you with your homework
-                        in an instant and secure that sweet 4.0 cGPA</p>
-                        <button class="button"><a href="#" class="header-button-link">Find Tutors</a></button>   
-              </div>
-              <div class="image-flex">
-                <img src="./img/Vector.png" alt="img" class="image">
-              </div>
-            </div>
+      <div class="container">
+        <nav class="navigation">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="#" class="nav-link home"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link tutors"> Tutors </a>
+            </li>
+            <li class="nav-item">
+              <a href="#" class="nav-link sign-up"> Sign Up </a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header-info">
+          <div class="header-text">
+            <h1 class="title">Get unstuck on your homework</h1>
+            <p class="subtitle">
+              Find world class tutors to help you with your homework in an
+              instant and secure that sweet 4.0 cGPA
+            </p>
+            <button class="button">
+              <a href="#" class="header-button-link">Find Tutors</a>
+            </button>
+          </div>
+          <div class="image-flex">
+            <img src="./img/Vector.png" alt="img" class="image" />
+          </div>
         </div>
+      </div>
     </header>
     <section class="section">
-        <div class="container">
-            <div class="section-text">
-                <h1>What Are You Waiting For? <br> It’s Completely Free!</h1>
-            </div>
-            <div class="section-button">
-                <button class="button-section"><a href="#" class="button-link">Become a Mentor</a></button>
-                <button class="button-section"><a href="#" class="button-link">Ask Questions</a></button>
-            </div>
-        </div>
-    </section>
-    <section class="section-footer">
       <div class="container">
-        <footer class="footer">
-            <ul class="footer-list">
-                <li class="footer-items footer-items-findMentors">
-                    findMentors
-                    <ul class="footer-list-background">
-                        <li class="footer-items-background footer-items-background-findMentors">Don’t fear your <br> homework</li>
-                    </ul>
-                </li>
-                <li class="footer-items">
-                    Help
-                    <ul class="footer-list-background">
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">Support</a>
-                        </li>
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">Knowledgebase</a>
-                        </li>
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">Tutorials</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="footer-items">
-                    Company
-                    <ul class="footer-list-background">
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">About Us</a>
-                        </li>
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">Careers</a>
-                        </li>
-                        <li class="footer-items-background">
-                            <a href="#" class="footer-items-link">Contact Us</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="footer-items">
-                    Contact Us
-                    <ul class="footer-list-background">
-                        <li class="footer-items-background">
-                            <p class="footer-items-background">info@findmentors.com</p>
-                        </li>
-                        <li class="footer-items-background">
-                            <p class="footer-items-background">1-800-200-300</p>
-                        </li>
-                        <li class="footer-items-background">
-                            <p class="footer-items-background">3500 Deer Creek Rd <br> Palo Alto, CA</p>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-           </footer>
+        <div class="section-text">
+          <h1 class="section-text-title">
+            What Are You Waiting For? <br>
+            It’s Completely Free!
+          </h1>
+        </div>
+        <div class="section-button">
+          <button class="button-section button-link">Become a Mentor</button>
+          <button class="button-section button-link">Ask Questions</button>
+        </div>
       </div>
     </section>
-</body>
+
+    <footer class="footer">
+      <div class="container">
+        <ul class="footer-list">
+          <li class="footer-items footer-items-findMentors">
+            findMentors
+            <ul class="footer-list-background">
+              <li
+                class="footer-items-background footer-items-background-findMentors"
+              >
+                Don’t fear your <br />
+                homework
+              </li>
+            </ul>
+          </li>
+          <li class="footer-items">
+            Help
+            <ul class="footer-list-background">
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">Support</a>
+              </li>
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">Knowledgebase</a>
+              </li>
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">Tutorials</a>
+              </li>
+            </ul>
+          </li>
+          <li class="footer-items">
+            Company
+            <ul class="footer-list-background">
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">About Us</a>
+              </li>
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">Careers</a>
+              </li>
+              <li class="footer-items-background">
+                <a href="#" class="footer-items-link">Contact Us</a>
+              </li>
+            </ul>
+          </li>
+          <li class="footer-items">
+            Contact Us
+            <ul class="footer-list-background">
+              <li class="footer-items-background">
+                <p class="footer-items-background">info@findmentors.com</p>
+              </li>
+              <li class="footer-items-background">
+                <p class="footer-items-background">1-800-200-300</p>
+              </li>
+              <li class="footer-items-background">
+                <p class="footer-items-background">
+                  3500 Deer Creek Rd <br />
+                  Palo Alto, CA
+                </p>
+              </li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
