--- a/Front-End-Pro/Homework_13.1/index.html
+++ b/Front-End-Pro/Homework_13.1/index.html
@@ -9,19 +9,19 @@
     <form id="form">
         <h1>We would like to help you</h1>
         <div class="contact">
-            <input type="text" id="name" name="name" placeholder="Name" required>
+            <input type="text" id="name" name="name" placeholder="Name">
             <div id="nameError" class="error"></div>
         </div>
         <div class="contact">
-            <textarea id="message" name="message" placeholder="Message" required></textarea>
+            <textarea id="message" name="message" placeholder="Message"></textarea>
             <div id="messageError" class="error"></div>
         </div>
         <div class="contact">
-            <input type="tel" id="phone" name="phone" placeholder="Phone number" required>
+            <input type="tel" id="phone" name="phone" placeholder="Phone number">
             <div id="phoneError" class="error"></div>
         </div>
         <div class="contact">
-            <input type="email" id="email" name="email" placeholder="Email" required>
+            <input type="email" id="email" name="email" placeholder="Email">
             <div id="emailError" class="error"></div>
         </div>
         <button type="submit">Send message</button>
