--- a/Front-End-Pro/practice_6/index.html
+++ b/Front-End-Pro/practice_6/index.html
@@ -3,15 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <div>
-        <h1>Розмір:</h1>
-        <input type="range" id="slider" min="1" max="10" value="5">
-    </div>
-    <img id="image" src="./img/MainAfter.webp" alt="img">
+    <button class="open-modal" data-modal="modal1">Open Modal 1</button>
+    <button class="open-modal" data-modal="modal2">Open Modal 2</button>
 </body>
-<script src="./test.js">
-</script>
+<script src="./test.js"></script>
 </html>
 
