--- a/Front-End-Pro/practice_6/index.html
+++ b/Front-End-Pro/practice_6/index.html
@@ -6,8 +6,32 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <button class="open-modal" data-modal="modal1">Open Modal 1</button>
-    <button class="open-modal" data-modal="modal2">Open Modal 2</button>
+    <form id="myForm">
+        <div>
+            <label for="name">Ім'я</label>
+            <input type="text" id="name" name="name" data-validation="required">
+            <div class="error-message" id="name-error"></div>
+        </div>
+        <div>
+            <label for="message">Повідомлення</label>
+            <textarea id="message" name="message" data-validation="required minLength:5"></textarea>
+            <div class="error-message" id="message-error"></div>
+        </div>
+        <div>
+            <label for="phone">Номер телефону</label>
+            <input type="text" id="phone" name="phone">
+        </div>
+        <div>
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" data-validation="required email">
+            <div class="error-message" id="email-error"></div>
+        </div>
+        <div>
+            <label for="address">Адреса</label>
+            <input type="text" id="address" name="address">
+        </div>
+        <button type="submit">Відправити</button>
+    </form>
 </body>
 <script src="./test.js"></script>
 </html>
